- Implemented renaming of product card to fix CSS overlap. - Fixed the CSS for the product card and product catalog.

--- a/budscannabis/src/Components/login/Verification.css
+++ b/budscannabis/src/Components/login/Verification.css
@@ -57,7 +57,7 @@
     width: 20%;
     margin-top: 10px;
     border: 2px solid #ADCC21;
-    padding: 12px 17px;
+    padding: 12px 8px;
     border-radius: 30px;
     font-family: 'Roboto', sans-serif;
     text-align: center;
