--- a/budscannabis/src/Components/menu/ProductTile.css
+++ b/budscannabis/src/Components/menu/ProductTile.css
@@ -5,19 +5,25 @@
     --title-color: #1E2019;
 }
 
-.card {
+.tile {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    word-wrap: break-word;
     max-width: 200px;
-    min-width: 40%;
+    min-width: 0;
     width: 80%;
     min-height: 70%;
     /*margin-top: -100px;*/
     background-color: var(--main-top-background-color);
+    background-clip: border-box;
+    border: 1px solid rgba(0, 0, 0, 0.125);
     margin: 10px 10px 0 10px;
     padding: 30px;
     box-shadow: 0 0.5em 1em -0.125em rgb(10 10 10 / 10%), 0 0 0 1px rgb(10 10 10 / 2%);
     border-radius: .25rem;
 }
-.card-image img{
+.tile-image img{
     max-width: 40%;
     max-height: 40%;
     width: auto;
@@ -56,15 +62,4 @@
     /*background-image: url('img/forest.jpg');*/
     background-size: cover;
     background-position: 50% 25%;
-}
-
-#card {
-    width: 80%;
-    min-height: 70%;
-    /*margin-top: -100px;*/
-    background-color: var(--main-top-background-color);
-    margin: -100px auto 0 auto;
-    padding: 30px;
-    box-shadow: 0 0.5em 1em -0.125em rgb(10 10 10 / 10%), 0 0 0 1px rgb(10 10 10 / 2%);
-    border-radius: .25rem;
 }
